# raide

./: .gitignore  Cargo.toml  LICENSE  README.md  example.java  file.rs  raide.ron  some.rs  test.lua
lang_tags/: cobol-tags  java-tags  json-tags  lua-tags  markdown-tags  rust-tags
pictures/: Logo.odg
src/: ctags_api.rs  lib.rs  main.rs  mapping.rs  ui.rs  utils.rs  workspace.rs
src_tags/: html-tags  json-tags  markdown-tags  python-tags  sh-tags
