[package]
name = "raide"
version = "0.1.0"
authors = ["Maik Fischer <maik.fischer@uni-oldenburg.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atk = "0.8.0"
cairo-rs = "0.8.1"
gdk = "0.12.1"
gdk-pixbuf = "0.8.0"
gio = "0.8.1"
glib = "0.9.3"
gtk = {version = "0.8.1", features = ["v3_22"]}
pango = "0.8.0"
pangocairo = "0.9.0"
sourceview = "0.8.0"
